# copier-python-uv

./: .copier-answers.test.yml  .copier-answers.yml  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.addon.strict.yaml  .pre-commit-config.standard.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  copier.yml  justfile  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  post-create.sh
.pre-commit-configs/: addon.standard.yaml  base.yaml
template/: .envrc  .pre-commit-config.addon.mypy.yaml.jinja  .pre-commit-config.addon.ruff.yaml.jinja  .pre-commit-config.addon.strict.yaml  .pre-commit-config.addon.strict.yaml.jinja  .pre-commit-config.standard.yaml  CONTRIBUTING.md  CONTRIBUTING.md.jinja  LICENSE.jinja  Makefile  README.md  pyproject.toml  pyproject.toml.jinja  {% if generate_dockerfile %}Dockerfile{% endif %}  {% if git_hosting == 'bitbucket' %}bitbucket-pipelines.yml{% endif %}  {% if git_hosting == 'gitlab' %}.gitlab-ci.yml{% endif %}.jinja  {% if license == 'Proprietary' %}LICENSE{% endif %}  {% if not use_just %}Makefile{% endif %}.jinja  {% if task_runner == "just" %}justfile{% endif %}.jinja  {% if task_runner == "make" %}Makefile{% endif %}.jinja  {% if use_just %}justfile{% endif %}.jinja
template/.devcontainer/: devcontainer.json  devcontainer.json.jinja  post-create.sh.jinja
template/.pre-commit-configs/: addon.standard.yaml.jinja  base.yaml.jinja  {% if type_checker == 'mypy' %}addon.mypy.yaml{% endif %}.jinja
template/tests/: {% if generate_example_code %}test_{{ package_name | replace('.', '_')}}.py{% endif %}.jinja
template/{% if generate_dockerfile %}scripts{% endif %}/: entrypoint.sh
template/{% if generate_docs != "none" %}docs{% endif %}/{% if generate_docs == "mkdocs" %}scripts{% endif %}/: gen_ref_pages.py
template/{% if git_hosting == 'github' %}.github{% endif %}/{% if git_hosting == 'github' %}workflows{% endif %}/: {% if git_hosting == 'github' %}ci.yml{% endif %}  {% if git_hosting == 'github' %}ci.yml{% endif %}.jinja
tests/: conftest.py  test_bake_project.py  test_copier_validator.py
tests/integration/: conftest.py  test_copier_update.py  test_make_commands.py  test_package_execution.py  test_precommit_workflows.py  test_project_workflows.py  test_skip_if_exists.py  test_tooling_integration.py
tests/unit/: test_black.py  test_copier_validator.py  test_template_generation.py
