[project]
name = "copier-python-uv"
version = "3.1.0"
description = "Opinionated copier template for python projects using uv"
authors = [
    { name = "Ali Cem", email = "ac@flowtale.ai" },
    { name = "Anders Stendevad", email = "as@flowtale.ai" },
    { name = "Dmytro Kyrychuk", email = "dmytro@flowtale.ai" },
    { name = "Franz Maria Heuchel", email = "fmh@flowtale.ai" },
    { name = "Nikita Pekarchuk", email = "np@flowtale.ai" },
    { name = "Rasmus Jones", email = "rj@flowtale.ai" },
    { name = "Rogvi David Arge", email = "rda@flowtale.ai" },
    { name = "Simone Gaiarin", email = "sg@flowtale.ai" },
    { name = "Tobias Rehfeldt", email = "tc@flowtale.ai" },
    { name = "Vladyslav Kromkach", email = "vk@flowtale.ai" },
]
license = { file = "LICENSE" }
requires-python = ">=3.12,<4"

[tool.uv]
add-bounds = "major"

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9.0.0",
  "ruff>=0.11.12,<0.12.0",
  "pytest-mock>=3.11.0,<4.0.0",
  "black>=25.1.0,<26.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "bump-my-version>=1.2.1,<2.0.0",
  "detect-secrets>=1.4.0,<2.0.0",
  "copier>=9.1.0,<10.0.0",
  "pytest-copier>=0.4.1,<0.5.0",
  "tox>=4.1.0,<5.0.0",
  "tox-uv>=1.26.0,<2.0.0",
  "rust-just>=1.42.4",
]

# This may change in the future once the `uv` build backend
# is out of preview
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["README.md", "LICENSE"]

[tool.black]
line-length = 88
preview = true
enable-unstable-feature = ["string_processing"]

[tool.ruff]
line-length = 88
fix = true
show-fixes = true
force-exclude = true
exclude = ["template"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle, basic flake8
    "W", # pycodestyle, basic flake8
    "F", # pyflakes, basic flake8
    "N", # pep8-naming, basic flake8
    "A",  # flake8-builtins,
    "D", # pydocstyle
    "PT", # flake8-pytest-style
    "T20", # flake8-print
    "ERA", # eradicate
    "B", # flake8-bugbear
    "C90", # maccabe, basic flake8
    "I" # isort
]
ignore = [
    # Docstring rules
    "D100",   # Ignore missing docstring in public modules
    "D104",   # Ignore missing docstring in public packages
    "D105",   # Ignore missing docstring in magic methods
    # Bugbear rules
    "B904"   # Ignore exception-raises-generic
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests}/*" = ["D1"]
"**/{docs,notebooks}/*" = ["T20", "S101", "E402", "D"]

# T20: Forbid the use of print
# S101: Forbid the use of assert
# F401: Ignore imported modules not used in __init__.py files
# E402: Ignore all module level imports should be at the top of the file.
# D: Ignore all docstring errors in autogenerated code


[tool.bumpversion]
current_version = "3.1.0"
commit = true
tag = true
tag_name = "{new_version}"
pre_commit_hooks = ["uv sync", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = ".copier-answers.yml"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "venv: tests that modify the virtual environment possibly causing interferences; should be run with tox",
]
